--- a/slots.html
+++ b/slots.html
@@ -8,16 +8,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Games Hub</title>
-    <script type="module" src="/src/slots/slots.js" defer></script>
-    <link rel="stylesheet" href="/src/slots/slots.css">
+    <script type="module" src="/slots.js" defer></script>
+    <link rel="stylesheet" href="/slots.css">
   </head>
   <body>
     <header>
       <nav class="nav-menu">
         <ul class="ul-main-menu">
           <li class="li-main-menu"><a href="/index.html">Home</a></li>
-          <li class="li-main-menu"><a href="/src/tic-tac-toe/tic-tac-toe.html">Tic Tac Toe</a></li>
-          <li class="li-main-menu"><a href="/src/rock-paper-scissors/rock-paper-scissors.html">Rock Paper Scissors</a></li>
+          <li class="li-main-menu"><a href="/tic-tac-toe.html">Tic Tac Toe</a></li>
+          <li class="li-main-menu"><a href="/rock-paper-scissors.html">Rock Paper Scissors</a></li>
         </ul>
       </nav>
     </header>
