--- a/public/tic-tac-toe.html
+++ b/public/tic-tac-toe.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Games Hub</title>
-    <script type="module" src="/public/tic-tac-toe.js" defer></script>
-    <link rel="stylesheet" href="/public/tic-tac-toe.css">
+    <script type="module" src="/tic-tac-toe.js" defer></script>
+    <link rel="stylesheet" href="/tic-tac-toe.css">
   </head>
   <body>
     <header>
