--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header>
       <nav class="nav-menu">
         <ul class="ul-main-menu">
-          <li class="li-main-menu"><a href="/tic-tac-toe.html">Tic Tac Toe</a></li>
-          <li class="li-main-menu"><a href="/rock-paper-scissors.html">Rock Paper Scissors</a></li>
-          <li class="li-main-menu"><a href="/slots.html">Slots</a></li>
+          <li class="li-main-menu"><a href="/src/tic-tac-toe.html">Tic Tac Toe</a></li>
+          <li class="li-main-menu"><a href="/src/rock-paper-scissors.html">Rock Paper Scissors</a></li>
+          <li class="li-main-menu"><a href="/src/slots.html">Slots</a></li>
         </ul>
       </nav>
     </header>
