--- a/pages/tic-tac-toe.html
+++ b/pages/tic-tac-toe.html
@@ -8,22 +8,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Games Hub</title>
-    <script type="module" src="/src/rock-paper-scissors.js" defer></script>
-    <link rel="stylesheet" href="/src/rock-paper-scissors.css">
+    <script type="module" src="/pages/tic-tac-toe.js" defer></script>
+    <link rel="stylesheet" href="/pages/tic-tac-toe.css">
   </head>
   <body>
     <header>
       <nav class="nav-menu">
         <ul class="ul-main-menu">
           <li class="li-main-menu"><a href="/index.html">Home</a></li>
-          <li class="li-main-menu"><a href="/tic-tac-toe.html">Tic Tac Toe</a></li>
-          <li class="li-main-menu"><a href="/slots.html">Slots</a></li>
+          <li class="li-main-menu"><a href="/pages/rock-paper-scissors.html">Rock Paper Scissors</a></li>
+          <li class="li-main-menu"><a href="/pages/slots.html">Slots</a></li>
         </ul>
       </nav>
     </header>
-    <h1 class="home home-title">ROCK PAPER SCISSORS</h1>
+    <h1 class="home home-title">TIC TAC TOE</h1>
     <section class="game-section">
-      <div class="game rps-container" id="rps-container"></div>
+      <div class="game ticTacToe-container" id="ticTacToe-container"></div>
     </section>
     <footer>
       <p>Games created by Àlex Meléndez Centeno</p>
