--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alex's Games Hub</title>
-    <script type="module" src="/src/main.js" defer></script>
-    <link rel="stylesheet" href="/src/index.css">
+    <script type="module" src="/main.js" defer></script>
+    <link rel="stylesheet" href="/index.css">
   </head>
   <body>
     <header>
       <nav class="nav-menu">
         <ul class="ul-main-menu">
-          <li class="li-main-menu"><a href="/tic-tac-toe.html">Tic Tac Toe</a></li>
-          <li class="li-main-menu"><a href="/rock-paper-scissors.html">Rock Paper Scissors</a></li>
-          <li class="li-main-menu"><a href="/slots.html">Slots</a></li>
+          <li class="li-main-menu"><a href="/pages/tic-tac-toe.html">Tic Tac Toe</a></li>
+          <li class="li-main-menu"><a href="/pages/rock-paper-scissors.html">Rock Paper Scissors</a></li>
+          <li class="li-main-menu"><a href="/pages/slots.html">Slots</a></li>
         </ul>
       </nav>
     </header>
