--- a/public/slots.html
+++ b/public/slots.html
@@ -10,6 +10,7 @@
     <title>Games Hub</title>
     <script type="module" src="/slots.js" defer></script>
     <link rel="stylesheet" href="/slots.css">
+    <link rel="stylesheet" href="/slots-game.css">
   </head>
   <body>
     <header>
