--- a/public/rock-paper-scissors.html
+++ b/public/rock-paper-scissors.html
@@ -10,6 +10,7 @@
     <title>Games Hub</title>
     <script type="module" src="/rock-paper-scissors.js" defer></script>
     <link rel="stylesheet" href="/rock-paper-scissors.css">
+    <link rel="stylesheet" href="/rockPaperScissors.css">
   </head>
   <body>
     <header>
