--- a/public/tic-tac-toe.html
+++ b/public/tic-tac-toe.html
@@ -10,6 +10,7 @@
     <title>Games Hub</title>
     <script type="module" src="/tic-tac-toe.js" defer></script>
     <link rel="stylesheet" href="/tic-tac-toe.css">
+    <link rel="stylesheet" href="/ticTacToe.css">
   </head>
   <body>
     <header>
